# hastings

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  hastings.cpp  readme.md
examples/: CMakeLists.txt  example_webcam.cpp  example_websocket.cpp
hastings/helpers/: profile_marker.cpp  profile_marker.h  websocket.cpp  websocket.h
hastings/libinfer/: cu_tensor.h  model.cpp  model.h  ops.cu  ops.h  ops_batch.cu  ops_batch.h  tensor.cpp  tensor.h
hastings/math/: calib.h  math.h
hastings/pipeline/: context.cpp  context.h  executors.cpp  executors.h  node.h  pipeline.cpp  pipeline.h  vector_graphic.h  visualizer.cpp  visualizer.h
tests/hastings/helpers/: test_profile_marker.cpp  test_websocket.cpp
tests/hastings/libinfer/: test_model.cpp  test_ops.cpp  test_tensor.cpp
tests/hastings/math/: test_calib.cpp  test_math.cpp
tests/hastings/pipeline/: helpers.cpp  helpers.h  test_context.cpp  test_executors.cpp  test_node.cpp  test_pipeline.cpp  test_vector_graphic.cpp
viewer/: README.md  package.json
viewer/public/: index.html  manifest.json
viewer/src/: App.css  App.tsx
viewer/src/PipelineSettings/: index.tsx
viewer/src/ThemeComponent/: index.css  index.tsx
viewer/src/ThemeToggle/: index.css  index.tsx
viewer/src/ViewerSettings/: index.css  index.tsx
viewer/src/context/: index.tsx
viewer/src/imageViewer/: ImageCanvas.tsx  Websocket.tsx  index.css  index.tsx  websocket.ts
viewer/src/settings/: index.tsx
